Remove side margins on CTA to prevent line wrapping

--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -140,7 +140,7 @@
 
 .cta {
   text-align: center;
-  margin: 80px;
+  margin: 80px 0;
 
   .icon {
     margin-right: 15px;
